--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "@supabase/supabase-js": "^2.56.0",
+    "bcryptjs": "^2.4.3",
     "next": "15.5.1",
     "next-auth": "^4.24.5",
-    "bcryptjs": "^2.4.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.1",
-    "@eslint/eslintrc": "^3",
-    "@types/bcryptjs": "^2.4.6"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
