--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@supabase/supabase-js": "^2.56.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.1",
     "next-auth": "^4.24.5",
+    "qrcode": "^1.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.4.1",
+    "recharts": "^2.12.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.76"
   },
@@ -30,6 +36,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
