--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --no-lint",
     "start": "next start",
     "lint": "eslint",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "vercel-build": "npm run build",
-    "postinstall": "npm run build"
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -33,9 +32,9 @@
     "next": "15.5.1",
     "next-auth": "^4.24.5",
     "qrcode": "^1.5.4",
-    "react": "19.1.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.4.1",
     "recharts": "^2.12.0",
@@ -51,8 +50,8 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.1",
     "formdata-node": "^6.0.1",
